Fixed crashing on out of bounds

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -2,6 +2,9 @@ canvas {
   margin: 40px auto;
   border: 1px solid black;
   transform: scale(3);
+  -webkit-transform: scale(3);
   transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  image-rendering: -webkit-optimize-contrast;
   image-rendering: pixelated;
 }
